--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="icon" type="image/png" href="/favicon/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="//faviconapple-touch-icon.png" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+
     <link rel="stylesheet" href="style.css">
     <title>nftida-loto</title>
 </head>
 <body>
 <header>
     <div class="header__container">
-        <img class="header__logo" src="/images/logo.jpeg" alt="logo">
+        <img class="header__logo" src="./images/logo.jpeg" alt="logo">
         <button id="add-ticket-btn">Добавить билет</button>
         <div class="search-area">
             <input type="number" id="search-input" min="1" max="90" placeholder="Введите номер бочонка" />
