feat() доработка бочонка на совпадение / немного стилей для кнопки поиска

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 <body>
 <header>
     <div class="header__container">
-        <img class="header__logo" src="./images/logo.jpeg" alt="logo">
-        <button id="add-ticket-btn">Добавить билет</button>
+        <a href="/">
+            <img class="header__logo" src="./images/logo.jpeg" alt="logo">
+        </a>
+        <button id="add-ticket-btn" class="button">Добавить билет</button>
         <div class="search-area">
             <input type="number" id="search-input" min="1" max="90" placeholder="Введите номер бочонка" />
-            <button id="search-btn" class="button">Искать</button>
+            <button id="search-btn" class="button button-search j-button-search">Искать</button>
         </div>
 
     </div>
