--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
     <link rel="shortcut icon" href="./favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
 
     <link rel="stylesheet" href="style.css?v=3">
-    <link rel="stylesheet" href="./plugins/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="plugins/font-awesome/6.0.0/css/all.min.css">
     <title>nftida-loto</title>
 </head>
 <body>
